# _AuditStandards_parsing

./: .env.example  .gitignore  CLAUDE.md  pyproject.toml
docs/: parsing_plan.md  plan_approval_checklist.md  style_map.draft.md  style_map.md  style_samples.md
docs/eval/: README.md  phase3_failure_analysis.md  phase3_report.md  phase3_self_audit_2026_04_19.md  phase4_p0_oracle_log.md  phase4_p0_plan.md  phase4_p0_retrofit_audit.md  queries.yaml  query_design_rules.md
scripts/: bulk_embed.py  embed_eval_upstage.py  profile_docx.py  smoke_isa200.py
src/audit_parser/: __init__.py  chunk.py  cli.py  db.py  db_eval.py  docx_reader.py  embed.py  eval.py  ir.py  markdown.py  numbering.py  structure.py  styles.py
tests/: conftest.py  test_chunk.py  test_db_schema.py  test_eval.py  test_numbering.py  test_structure_integration.py  test_styles.py
