[project]
name = "audit-parser"
version = "0.1.0"
description = "KICPA 감사인증기준 DOCX → Markdown → pgvector 파이프라인"
requires-python = ">=3.11"
dependencies = [
    "python-docx>=1.1.2",
    "lxml>=5.3.0",
    "typer>=0.12.5",
    "rich>=13.9.0",
    "python-dotenv>=1.0.1",
]

[project.optional-dependencies]
vector = [
    "psycopg[binary]>=3.2.3",
    "pgvector>=0.3.6",
    "httpx>=0.27.2",
    "tenacity>=9.0.0",
]

[project.scripts]
audit-parser = "audit_parser.cli:app"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/audit_parser"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B", "SIM"]
